2004-09-22  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (ftpd): Use UTIL_LIB.

2004-08-27  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (ftpd_gss_convert_creds): Terminate argument list to
	krb5_build_principal_ext with 0, not NULL.  Patch from Nalin
	Dahyabhai.

2004-08-27  Sam Hartman  <hartmans@mit.edu>

	* ftpd.c (passwd;): Patch from Garry Zacheiss to use
	krb5_get_init_creds_password instead of krb5_get_in_tkt since
	get_in_tkt is obselete 

2004-08-08  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (main): Use socklen_t for the size of the address from
	accept.

2003-12-13  Ken Raeburn  <raeburn@mit.edu>

	* ftpcmd.y (getline): Allow "AUTH" as an unprotected command.
	* ftpd.c (login): Fix checks for accept_sec_context status.  Only
	send back one message in the CONTINUE_NEEDED case.
	(with_gss_error_text): New function, split out from
	reply_gss_error.
	(reply_gss_error): Call it.
	(reply_gss_error_1): New function.
	(log_gss_error, log_gss_error_1): New functions.
	(login): Call log_gss_error instead of syslog on error from
	gss_display_name.

2003-06-05  Sam Hartman  <hartmans@mit.edu>

	* popen.c (ftpd_popen): Use fork not vfork

2003-04-23  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c: Don't declare errno.

2003-01-03  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (auth_data): Kerberos v4 checksum must be a 32-bit
	value.

2002-10-23  Ezra Peisach  <epeisach@bu.edu>

	* ftpcmd.y: Bison 1.75 cleanup. Essentially remove `=' before
	statements to be executed. (ticket 1218).

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-08-23  Ezra Peisach  <epeisach@bu.edu>

	* ftpd.c (auth_data, reply_gss_code): Use OM_uint32 instead of int
	to match arguments to gssapi functions.

2002-07-12  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c: Include port-sockets.h.

2002-06-25  Ken Raeburn  <raeburn@mit.edu>
